--- a/style2.css
+++ b/style2.css
@@ -7,11 +7,27 @@
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
 }
-body
-{
-    min-height: 100vh;
-    overflow-x: hidden;
-    background: linear-gradient(#2e0077,#5b53a1)
+html, body {
+  width: 100%;
+  height:100%;
+}
+
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 section img
 {
