--- a/style.css
+++ b/style.css
@@ -1,17 +1,75 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap');
 *
 {
-    margin: 0;
-    padding: 0;
+    /*margin: 0;
+    padding: 0;*/
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
 }
-body
+html {
+    height:100%;
+  }
+  
+  body {
+    margin:0;
+  }
+  
+  .bg {
+    animation:slide 3s ease-in-out infinite alternate;
+    background-image: linear-gradient(-60deg, rgb(38, 0, 255) 50%, rgb(255, 0, 234) 50%);
+    bottom:0;
+    left:-50%;
+    opacity:.5;
+    position:fixed;
+    right:-50%;
+    top:0;
+    z-index:-1;
+  }
+  
+  .bg2 {
+    animation-direction:alternate-reverse;
+    animation-duration:4s;
+  }
+  
+  .bg3 {
+    animation-duration:5s;
+  }
+  
+  .content {
+    background-color:rgba(255,255,255,.8);
+    border-radius:.25em;
+    box-shadow:0 0 .25em rgba(0,0,0,.25);
+    box-sizing:border-box;
+    left:50%;
+    padding:10vmin;
+    position:fixed;
+    text-align:center;
+    top:50%;
+    transform:translate(-50%, -50%);
+  }
+  
+  h1 {
+    font-family:monospace;
+  }
+  
+  @keyframes slide {
+    0% {
+      transform:translateX(-25%);
+    }
+    100% {
+      transform:translateX(25%);
+    }
+  }
+section img
 {
-    min-height: 100vh;
-    overflow-x: hidden;
-    background: linear-gradient(#2b1055,#7591de)
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
 }
 header
 {
@@ -58,80 +116,32 @@ header ul li a.active
     background: #fff;
     color: #2b1055;
 }
-section
-{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    padding: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+
+.container{
+    margin-top: 150px;
+    color: #fff
 }
-section::before
-{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(to top,#1c0522,transparent);
-    z-index: 1000;
-}
-section img
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    pointer-events: none;
-}
-section img#moon
-{
-    mix-blend-mode: screen;
-}
-section img#mountains_front
-{
-    z-index: 10;
-}
-#text
-{
-    position: absolute;
-    right: -350px;
-    color: #fff;
-    white-space: nowrap;
-    font-size: 7.5vw;
-    z-index: 9;
-}
-#btn
-{
+.container a{color: #b8b8b8;}
+.container a:hover{color: #b8b8b888;}
+.container a:focus{color: #707070;}
+.container a::selection{color: #707070;}
+
+.button{
+    border: none;
+    color: white;
+    padding: 0.75rem;
+    text-align: center;
     text-decoration: none;
     display: inline-block;
-    padding: 8px 30px;
-    border-radius: 40px;
-    background: #fff;
-    color: #2b1055;
-    font-size: 1.5em;
-    z-index: 9;
-    transform: translateY(100px);
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+
+    background-color: #2b1055;
+    border: #2e0077;
 }
-.sec
-{
-    position: relative;
-    padding: 100px;
-    background: #1c0522;
-}
-.sec h2
-{
-    font-size: 3.5em;
-    margin-bottom: 10px;
-    color: #fff;
-}
-.sec p
-{
-    font-size: 1em;
-    color: #fff;
+.button:hover{
+    background-color: #2e0077;
 }
